--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,56 @@
 a{
     cursor: pointer;
+   
+/*Les couleurs de la charte sont le bleu #0065FC, et sa version plus
+ claire #DEEBFF ainsi que le gris pour le fond #F2F2F2.*/
+}
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    box-sizing: border-box;
+}
+
+.header{
+    height: 10vh;
     
 }
-nav{
-    cursor: pointer;
-    display:flex;
-    justify-content: flex-end;
+
+.logo-box{
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
 }
-ul{
+.logo{
+    height:3.5rem;
+}
+
+
+.navigation_list{ 
+    padding: 0;
+    margin:0;
     list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    
+    
+
 }
+ul li a {
+    text-decoration: none;
+    padding: 60px 20;
+    background-color: white;
+    color:black;
+}
+
+
+#inscrire{
+    color: blue;
+}
+ul li a:hover{
+   color: #0065FC;
+   background-color:#DEEBFF ;
+
+}
+#recherche{  
+}
+     
