--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,156 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+
 a{
     cursor: pointer;
-   
+
+
 /*Les couleurs de la charte sont le bleu #0065FC, et sa version plus
  claire #DEEBFF ainsi que le gris pour le fond #F2F2F2.*/
 }
+h1{
+    font-size: 19px;
+
+}
+h2{
+    font-size: 19px;
+}
 body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    box-sizing: border-box;
+    font-family:'Raleway', sans-serif;
+    
+    
 }
 
 .header{
-    height: 10vh;
+    width:100%;
+    height: 80px;
+    box-sizing: border-box;
+
+
     
 }
 
 .logo-box{
+    float: left;
     position: absolute;
     top: 2rem;
     left: 2rem;
 }
 .logo{
-    height:3.5rem;
+    margin: 0; padding: 0; /*marge ext et int */
+    height: 2rem;   /*taille logo*/
 }
 
 
 .navigation_list{ 
+    
     padding: 0;
-    margin:0;
-    list-style-type: none;
-    display: flex;
+    margin:1;
+    list-style-type: none; /* enleve les points */
+    text-decoration: none; /*enleve le soulignement*/
+    display: flex;  /* mettre en ligne*/
     justify-content: flex-end;
-    
-    
-
 }
-ul li a {
+nav ul li a {
     text-decoration: none;
     padding: 60px 20;
     background-color: white;
     color:black;
 }
-
-
+nav ul li a:hover{ 
+    cursor: pointer;
+    box-shadow:5px -20px  red;
+    color:red;
+  }
+.toto:hover{
+    color:green;
+}
 #inscrire{
     color: blue;
+    position: static;
 }
-ul li a:hover{
-   color: #0065FC;
-   background-color:#DEEBFF ;
+
+
+.contenant{
+    list-style-type: none;
+    
+    
+}
+
+
+.styled {
+    border: 0;
+    line-height:2;
+    padding: 0 15px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    
+    border-radius: 30px;
+  }
+  .styled:hover {
+    background-color: rgb(106, 148, 226);
+    }
+.filtre .contenant a{
+    color: black;
+    text-decoration: none;
 
 }
-#recherche{  
+.filtre .contenant i{
+    color:#0065FC;
+    
 }
-     
+
+
+/*Les couleurs de la charte sont le bleu #0065FC, et sa version plus
+ claire #DEEBFF ainsi que le gris pour le fond #F2F2F2.*/
+
+
+
+
+
+
+
+
+
+.hebergement_Marseille{
+    width: 100%;
+    display: flex;
+    background-color:#F2F2F2 ;
+    border-radius: 2rem;
+    height: 650px;
+    margin-right: 20px;
+    
+   
+}
+.photo_bloc1{
+    width:60%;
+    height: 80px;
+    box-sizing: border-box;
+    color: black;
+}
+.hebergement_populaire{
+    width: 40%;
+    background-color: #DEEBFF;
+    border-radius: 2rem;
+    margin-left: 20px;
+    height: 650px;
+}
+
+
+    
+#bloc1{
+    cursor: pointer;
+    border-radius: 2rem;
+    width:250px;
+    height: 200px;
+    margin: auto;
+    align-content: center;
+
+    
+}
+.photo_bloc1{
+    display: flex;
+    align-content: space-between;
+
+}
