amelirations de la recherche et filtres

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ h2{
 }
 body{
     font-family:'Raleway', sans-serif;
+    margin: auto;
+    max-width: 1500px;
     
     
 }
@@ -27,7 +29,8 @@ body{
 .header{
     width:100%;
     height: 80px;
-    box-sizing: border-box;
+    margin: 10px;
+    
 
 
     
@@ -62,7 +65,7 @@ nav ul li a {
 }
 nav ul li a:hover{ 
     cursor: pointer;
-    box-shadow:10px  red;
+   
   }
 .toto:hover{
     color:green;
@@ -73,37 +76,86 @@ nav ul li a:hover{
 }
 
 
+
+
 .contenant{
     list-style-type: none;
     
     
 }
-
-
-.styled {
-    border: 0;
-    line-height:2;
-    padding: 0 15px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    
-    border-radius: 30px;
-  }
-  .styled:hover {
-    background-color: rgb(106, 148, 226);
-    }
-.filtre .contenant a{
-    color: black;
-    text-decoration: none;
+.recherche{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 8px 0px 30px 20px;
+}
+.icon{
+    background-color: #F2F2F2;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    padding:9.5px;
 
 }
-.filtre .contenant i{
-    color:#0065FC;
+.input{
+    padding:9px ;
+    border: 1px solid #F2F2F2;
+}
+.btn{
+    background-color:#0065FC;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    padding: 10px;
+    border:none;
+    color: white;
     
 }
-
-
+.filtre{
+    display: flex;
+    align-items: center;
+    margin: 10px;
+}
+button{
+    cursor: pointer;
+}
+.bouton1{
+    height:50px;
+    width: 150px;
+}
+.bouton2{
+    height: 50px;
+    width: 250px;
+}
+.styled{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 0 2px 0 15px;
+    border: 2px solid #f2f2f2;
+    padding-left: 40px;
+    border-radius: 25px;
+    font-weight: 600;
+    background-color: white;
+}
+.btnf{
+    
+    font-size: 30px; /* taille de l'icone*/
+    color: #0065FC; /*couleur de l'incone*/
+    justify-content: center;
+    width: 45px; /* largeur de la celule*/
+    height: 45px;/* hauteur de la celule*/
+    background-color: #DEEBFF;/*fond couleur celue*/
+    border-radius: 25px; /* l'arrondie de la celule*/
+    position: absolute;
+    left: -10;
+    
+}
+.info{
+   
+}
+.inf{
+    font-size:25px ;
+}
 /*Les couleurs de la charte sont le bleu #0065FC, et sa version plus
  claire #DEEBFF ainsi que le gris pour le fond #F2F2F2.*/
 
@@ -112,27 +164,31 @@ nav ul li a:hover{
     height: 350px;
     background-color: #F2F2F2;
     border-radius: 2rem;
+    padding:20px;
    
     
     
 }
 .bloc2{
     width: auto;
-    height: 650px;
+    height: 350px;
     background-color:#F2F2F2 ;
-    border-radius: 2rem;  
+    border-radius: 2rem; 
+    padding-top: 20px; 
     
 }
 .centre{
     display:flex
+    
 }
 
     
 #bloc1{
+    
     cursor: pointer;
     border-radius: 2rem;
-    width:250px;
-    height: 200px;
+    width:200px;
+    height: 150px;
     margin: auto;
     
     
@@ -143,8 +199,8 @@ nav ul li a:hover{
 #bloc2{
     cursor: pointer;
     border-radius: 2rem;
-    width:250px;
-    height: 200px;
+    width:200px;
+    height: 150px;
     margin: auto;
     
     
